--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  collection: ^1.17.2
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.9
