--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.3.0
   collection: ^1.17.2
   flutter:
     sdk: flutter
